
=======================================================
            WanT code:  Log of Changes 
=======================================================


13 Feb 2009      Bug in autoconf found. output of ETSF_IO_LINE in configure.msg
                 removed to workaround the bug. (AF)

12 Feb 2009      wannier90 fmt supported in transport; etsf_error handler
                 added (according to a former implementation of Conor Hogan).
                 (AF)

10 Feb 2009      Input files for abinit calculations made more standard
                 (thanks to Tonatiuh Rangel). Test03 improved and references
                 updated. Stdout made more clear when selecting DFT datafiles. 
                 ETSF_IO updated to version v1.0.2 . Variable efermi added. (AF)

06 Feb 2009      Makefile system in plugins cleaned up. Bug fixed in mp.f90
                 (mpi extention removed). (AF)

05 Feb 2009      Cleanup in plot.f90 . (AF)

04 Feb 2009      Test06 updated including the calculation of gold chain using
                 Abinit. (AF)

03 Feb 2009      Bug fixed in the documentation (definition of froz_min);
                 Courtesy of Regina Lelis de Sousa. Implementation of
                 eigenchannles added in conductor.x: only eigenvalues are
                 computed. Extrapolation procedure added to blc2wan (problem
                 issued by Leonardo Matheus Marion Jorge). (AF)

31 Jan 2009      Bug fixed in etsf_io interface. Clenaup of unused variables
                 all around. Interface to ETSF_IO working. Examples of Abinit 
                 usage added to test01, test03. (AF)

30 Jan 2009      Interface to etsf_io (eg Abinit) working upto read-in of
                 wfc and wfc grids. makedeps.sh updated to avoid error
                 messages generated by special modules like etsf_io etc. (AF)

28 Jan 2009      Plugins are almost properly compiling. Configuration machinery
                 updated. Further changes to plugins Makefile system. 